[package]
name = "quicli"
version = "0.2.0"
description = "Quickly build cool CLI apps in Rust."
authors = ["Pascal Hertleif <killercup@gmail.com>"]
readme = "Readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/quicli"
homepage = "https://killercup.github.io/quicli/"
categories = ["command-line-interface"]
keywords = ["cli", "prelude"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
serde = {version="1.0.27", optional=true}
serde_derive = {version="1.0.27", optional=true}
structopt = "0.2"
structopt-derive = "0.2"
log = "0.4.1"
env_logger = "0.5.3"
glob = "0.2.11"
rayon = "1.0"

[features]
default = ["full-throttle"]
full-throttle = [
    "serde",
    "serde_derive",
    "glob",
    "rayon",
]

[workspace]
members = [
    "examples/commit",
    "examples/Readme",
    "examples/thumbnails",
    "examples/verbosity",
]

[patch.crates-io]
quicli = { path = '.' }
