[package]
name = "quicli"
version = "0.3.0"
description = "Quickly build cool CLI apps in Rust."
authors = ["Pascal Hertleif <killercup@gmail.com>"]
readme = "Readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/quicli"
homepage = "https://killercup.github.io/quicli/"
categories = ["command-line-interface"]
keywords = ["cli", "prelude"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
serde = { version="1.0.27", optional = true}
serde_derive = { version="1.0.27", optional = true }
structopt = "0.2.8"
structopt-derive = "0.2.8"
log = "0.4.1"
env_logger = "0.5.3"
glob = { version = "0.2.11", optional = true }
rayon = { version = "1.0", optional = true }
clap-verbosity-flag = "0.1.0"

[dev-dependencies]
tempfile = "3.0.3"

[features]
default = ["full-throttle"]
full-throttle = [
    "serde",
    "serde_derive",
    "glob",
    "rayon",
]

[workspace]
members = [
    "examples/commit",
    "examples/Readme",
    "examples/thumbnails",
    "examples/verbosity",
]

[patch.crates-io]
quicli = { path = '.' }
